# AutoPlates

./: .gitignore  README.md  pyproject.toml
database/: db_utils.py  schema.sql
src/: main.py
testing/: run_tests.py
testing/examples/: basic_usage.py  camera_test.py  database_operations.py  example.py
testing/tests/: test_db_utils.py  test_detector.py  test_setup.py
training/: README.md  run_training.py
training/configs/: training_config.yaml
training/data/: dataset.yaml
training/scripts/: evaluate.py  train.py
training/utils/: data_preparation.py
