[project]
name = "plate-detector"
version = "0.1.0"
description = "YOLOv8 License Plate Detection and Extraction Pipeline"
authors = [
    {name = "Neil Thomas", email = "neilthomas@berkeley.edu"}
]
dependencies = [
    "ultralytics>=8.0.0",
    "kagglehub>=0.1.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [] 